fix: adjust waybar margins for consistency and alignment

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -60,7 +60,7 @@ window#waybar {
 #custom-screenrecording-indicator,
 #custom-update {
   min-width: 12px;
-  margin: 0 7.5px;
+  margin: 0 8px;
 }
 
 #tray {
@@ -68,22 +68,23 @@ window#waybar {
 }
 
 #bluetooth {
-  margin-right: 17px;
+  margin-right: 16px;
 }
 
 #network {
-  margin-right: 13px;
+  margin-right: 16px;
 }
 
 #custom-expand-icon {
-  margin-right: 18px;
+  margin-right: 16px;
   padding-right: 6px;
   border-right: 1px solid alpha(@foreground, 0.15);
 }
 
 #tray {
   margin: 0;
-  padding-left: 6px;
+  padding-left: 0px;
+  padding-right: 16px;
 }
 
 #workspaces {
@@ -112,7 +113,7 @@ tooltip {
 }
 
 #clock {
-  margin-left: 8.75px;
+  margin-left: 9px;
 }
 
 .hidden {
